fixed the overlapping hero background image

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -20,6 +20,7 @@ body {
   letter-spacing: -0.234375px;
   color: $Dark-grey;
   background: $Very-Light-Gray;
+  overflow-x: hidden;
 }
 
 h1,
